# wxminer

./: .gitignore  LICENSE  README.md  pyproject.toml
wxminer/: __init__.py  __main__.py  wechat.py
